# InSecurity

./: .gitignore  README.md  index.html  package-lock.json  package.json  requirements.txt  tsconfig.json  vite.config.ts
.github/workflows/: release.yml
python/: README.md  requirements.txt
python/ml_models/: __init__.py  model_security.py
python/ml_models/classifier/: __init__.py  model.py
python/ml_models/novelty/: __init__.py  features.py  model.py
python/tests/: test_model_security.py
python/training/: README.md  extract_features.py  train_novelty.py
resources/models/: ml_thresholds.json
resources/models/classifier/: calibrator.pkl  calibrator.pkl.sig  manifest.json
resources/models/novelty/: features.json  manifest.json  model.joblib  model.joblib.sig  model.onnx  scaler.pkl  scaler.pkl.sig  (+2 more)
resources/whitelists/: system_files.txt
src/: App.css  App.test.tsx  App.tsx  main.tsx
src-tauri/: .schema.json  Cargo.toml  installer-hooks.nsh  tauri.conf.json
src-tauri/.cargo/: config.toml
src-tauri/capabilities/: default.json
src-tauri/examples/: bench_yara.rs
src-tauri/icons/: icon.icns
src-tauri/src/: errors.rs  lib.rs  main.rs
src-tauri/src/cache/: cache_manager.rs  hash_cache.rs  mod.rs
src-tauri/src/commands/: app_updates.rs  audit.rs  database.rs  exclusions.rs  feedback.rs  insights.rs  mod.rs  network.rs  quarantine.rs  reputation.rs  reputation_checker.rs  scan.rs  scheduled_scans.rs  settings.rs  updates.rs
src-tauri/src/config/: settings.rs
src-tauri/src/core/: behavior.rs  feedback_store.rs  firewall.rs  ingestion.rs  ml_bridge.rs  mod.rs  network_monitor.rs  pipeline.rs  quarantine_manager.rs  rate_limiter.rs  real_time.rs  reputation.rs  signature.rs  static_scanner.rs  tamper_protection.rs  threat_feed.rs  threat_neutralizer.rs  update_manager.rs  utils.rs  yara_scanner.rs
src-tauri/src/core/emulation/: api_hooks.rs  cpu_emulator.rs  emulator.rs  memory_manager.rs  mod.rs  pe_loader.rs
src-tauri/src/database/: batcher.rs  migrations.rs  mod.rs  models.rs  queries.rs  schema.rs
src-tauri/src/ml/: ember_extractor.rs  mod.rs  novelty_extractor.rs  onnx_classifier.rs  onnx_novelty.rs
src/hooks/: useConfirmDialog.ts  useDashboard.ts  useExclusions.ts  useNetworkSecurity.ts  useQuarantine.ts  useRealtimeScan.ts  useSettings.ts
src/i18n/: index.ts
src/services/: api.ts
src/test/: integration.test.ts  setup.ts
src/types/: dashboard.ts  exclusion.ts  insights.ts  network.ts  quarantine.ts  scan.ts  threatIntel.ts
src/utils/: error.ts  file.ts  index.ts  verdict.ts
training_data/: README.md
(+55 files in other folders)
