[package]
name = "antivirus-ui"
version = "1.0.2"
description = "InSecurity - Desktop Antivirus Application"
authors = ["InSecurity Team"]
edition = "2021"
default-run = "antivirus-ui"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[features]
default = []
# Enable CPU emulation for packed binary unpacking (requires LLVM/Clang, CMake)
emulation = ["unicorn-engine", "pelite"]

[lib]
name = "antivirus_ui_lib"
crate-type = ["staticlib", "cdylib", "rlib"]

[build-dependencies]
tauri-build = { version = "2", features = [] }

[dependencies]
tauri = { version = "2", features = ["tray-icon"] }
tauri-plugin-opener = "2"
tauri-plugin-dialog = "2"
tauri-plugin-autostart = "2"
serde = { version = "1", features = ["derive"] }
serde_json = "1"

# Cryptography
sha2 = "0.10"
md-5 = "0.10"
aes-gcm = "0.10"
ring = "0.17"
base64 = "0.22.1"
ed25519-dalek = { version = "2.1", features = ["rand_core"] }

# Database
rusqlite = { version = "0.30", features = ["bundled", "chrono"] }

# Async runtime
tokio = { version = "1", features = ["full"] }
futures = "0.3"

# HTTP client
reqwest = { version = "0.12.24", features = ["json"] }

# Serialization
chrono = { version = "0.4", features = ["serde"] }

# Logging
log = "0.4"

# Error handling
thiserror = "1.0"
anyhow = "1.0"

# Random number generation
rand = "0.8"

# Key derivation / keyring
argon2 = "0.4"
keyring = "1.1"

# ONNX Runtime (native Rust ML inference)
ort = { version = "2.0.0-rc.12", features = ["download-binaries", "copy-dylibs"] }

# Utilities
once_cell = "1.18"
dirs = "5.0"
csv = "1.3"
notify = "5"
regex = "1"
rayon = "1.7"
tempfile = "3.6"
walkdir = "2"
sysinfo = "0.31"
yara-x = "1.15.0"

# Windows-specific
windows-sys = { version = "0.52", features = ["Win32_Foundation", "Win32_Security", "Win32_System_Diagnostics_ToolHelp", "Win32_System_Threading", "Win32_NetworkManagement_IpHelper", "Win32_Networking_WinSock", "Win32_System_LibraryLoader", "Win32_UI_WindowsAndMessaging"] }
winreg = "0.52"

# Emulation (CPU/Memory via Unicorn Engine) - optional, requires native deps
# Requires: LLVM/Clang, CMake, Visual Studio Build Tools
# Install: winget install LLVM.LLVM Kitware.CMake
# Set: $env:LIBCLANG_PATH = "C:\Program Files\LLVM\bin"
# Enable with: cargo build --features emulation
unicorn-engine = { version = "2.0", optional = true }
pelite = { version = "0.10", optional = true }
tauri-plugin-notification = "2.3.3"

[dev-dependencies]
serial_test = "0.5"
